cmake_minimum_required(VERSION 3.5 FATAL_ERROR)

set(PROJ_NAME "research_m512")
project (${PROJ_NAME})

set(PROJECT_ROOT_DIR ${PROJECT_SOURCE_DIR})
set(THIRD_PARTY_ROOT_DIR ${PROJECT_ROOT_DIR}/third_party)

set(CMAKE_VERBOSE_MAKEFILE ON)

set(SOURCES_FILES ${PROJECT_ROOT_DIR}/csrc/research_m512.cpp)
add_executable(${PROJ_NAME} ${SOURCES_FILES})

if(MSVC)
SET_TARGET_PROPERTIES(${PROJ_NAME} PROPERTIES COMPILE_FLAGS "/arch:AVX2 /arch:AVX512")
else()
SET_TARGET_PROPERTIES(${PROJ_NAME} PROPERTIES COMPILE_FLAGS "-mavx2 -mavx512f")
endif()